k8s/old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graduados-ingress
  namespace: web-internacionales-appgraduados
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "16224m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRequestBodyAccess On
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff" always;
      more_set_headers "Access-Control-Allow-Origin: *" always;
      more_set_headers "Access-Control-Allow-Methods: GET, POST, OPTIONS" always;
      more_set_headers "Access-Control-Allow-Headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type" always;
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* \.js$ {
        add_header Content-Type application/javascript;
      }
      location ~* \.css$ {
        add_header Content-Type text/css;
      }
  labels:
    capsule.clastix.io/managed-by: web
spec:
  ingressClassName: nginx
  rules:
  - host: internacionalesgraduados.unicen.edu.ar
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: graduados-backend
            port:
              number: 3000
      - path: /socket.io(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: graduados-backend
            port:
              number: 3000
      - path: /assets/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: graduados-frontend
            port:
              number: 80
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: graduados-frontend
            port:
              number: 80
  tls:
  - hosts:
    - internacionalesgraduados.unicen.edu.ar
    secretName: graduados-tls
